[tool.poetry]
name = "sns-hub"
version = "0.1.0"
description = "Package to handle with pub and sub messages to SNS"
authors = ["Maicol kaiser <eu@maicol.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.70"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
moto = "^5.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-s -x --doctest-modules"
